Add method using preferred tiles specified in config file, including reading generated tiles from preferred list, and producing generated tiles from preferred. #25 Also checking of config file #26

--- a/sample_project_config.yaml
+++ b/sample_project_config.yaml
@@ -89,6 +89,10 @@ semantic_segmentation_classes: 1
 #  - 1 12 1 29
 tiles_of_interest:
 
+# Specify the units used to define the tiles of interest.  These can be tile units ("tile"), position units in the 
+# overview ("overview"), or voxel units ("voxels").  All tiles of interest entries need to use the same units.
+tiles_of_interest_units: "overview"
+
 # the following values generally represent paths where output will be stored, and may not
 # need to be modified.
 
