Changing term from voxel units to source

--- a/sample_project_config.yaml
+++ b/sample_project_config.yaml
@@ -90,7 +90,7 @@ semantic_segmentation_classes: 1
 tiles_of_interest:
 
 # Specify the units used to define the tiles of interest.  These can be tile units ("tile"), position units in the 
-# overview ("overview"), or voxel units ("voxels").  All tiles of interest entries need to use the same units.
+# overview ("overview"), or source units ("source").  All tiles of interest entries need to use the same units.
 tiles_of_interest_units: "overview"
 
 # the following values generally represent paths where output will be stored, and may not
